@@ -48,7 +48,6 @@
 		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>kafka</artifactId>
-<!--			<version>1.15.0</version>-->
 			<scope>test</scope>
 		</dependency>
 
@@ -123,12 +122,6 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<argLine>--enable-preview</argLine>
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-failsafe-plugin</artifactId>
 				<configuration>
 					<argLine>--enable-preview</argLine>
 				</configuration>
